syntax = "proto3";

package api.proto;

option go_package = "ai-translator/api/proto;proto";

import "common.proto";

service TTSService {
  rpc Synthesize(TTSRequest) returns (stream TTSResponse);
  rpc StreamSynthesize(stream TTSRequest) returns (stream TTSResponse);
}

message TTSRequest {
  string session_id = 1;
  string text = 2;
  string language_code = 3;
  VoiceConfig voice_config = 4;
}

message VoiceConfig {
  string voice_name = 1;
  float speaking_rate = 2;
  float pitch = 3;
}

message TTSResponse {
  string session_id = 1;
  AudioChunk audio = 2;
  bool is_final = 3;
}
